# Long_Num

./: A.cpp  B.cpp  C.cpp  C.h  D.cpp  README.md  argv.json  date.h
LongA/: CMakeLists.txt  Makefile  head.hpp  pi.cpp  realis.cpp  test.cpp
LongA/bibl/: CMakeLists.txt  head.hpp  realis.cpp  test.cpp
extensions/: extensions.json
extensions/formulahendry.code-runner-0.12.2/: package.json
extensions/ms-vscode.cmake-tools-1.19.52/: package.json
extensions/ms-vscode.cpptools-1.23.6-win32-x64/: package.json
extensions/ms-vscode.cpptools-extension-pack-1.3.0/: package.json
extensions/ms-vscode.cpptools-themes-2.0.0/: package.json
extensions/twxs.cmake-0.0.17/: package.json
